--- a/composer.json
+++ b/composer.json
@@ -5,28 +5,28 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.0",
-        "cviebrock/eloquent-sluggable": "^8.0",
+        "php": "^8.1",
+        "cviebrock/eloquent-sluggable": "^10.0",
         "diglactic/laravel-breadcrumbs": "^8.0",
-        "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/fortify": "^1.13",
-        "laravel/framework": "^8.75",
-        "laravel/sanctum": "^2.11",
+        "laravel/framework": "^10.0",
+        "laravel/sanctum": "^3.2",
+        "doctrine/dbal": "^3.0",
         "laravel/tinker": "^2.5",
         "spatie/laravel-permission": "^5.5",
-        "yajra/laravel-datatables": "^1.5",
-        "yajra/laravel-datatables-buttons": "^4.13",
-        "yajra/laravel-datatables-html": "^4.41"
+        "yajra/laravel-datatables": "^10.0",
+        "yajra/laravel-datatables-buttons": "^10.0",
+        "yajra/laravel-datatables-html": "^10.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.7",
-        "facade/ignition": "^2.5",
+        "spatie/laravel-ignition": "^2.0",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^5.10",
-        "phpunit/phpunit": "^9.5.10"
+        "nunomaduro/collision": "^7.0",
+        "phpunit/phpunit": "^10.0"
     },
     "autoload": {
         "psr-4": {
@@ -68,6 +68,6 @@
         "preferred-install": "dist",
         "sort-packages": true
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
